# gitskill

./: .gitattributes  CMakeLists.txt  run.sh
src/: main.cpp
